fixed spacing in search

--- a/browse.css
+++ b/browse.css
@@ -85,10 +85,13 @@
 
 @media (max-aspect-ratio: 1/1), (max-width: 770px) {
     .resImg {
-        width: 12em;
+        width: 9.5em;
     }
 
     .resImgG {
-        padding: 5em 0em;
+        height: 0.75em;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 }
